app/src/main/java/com/example/joshu/mvp/model/api/network/error/ServerNotAuthException.kt
package com.example.joshu.mvp.model.api.network.error

import java.lang.RuntimeException

class ServerNotAuthException: RuntimeException("user is not auth")